--- a/templates/new_spot.html
+++ b/templates/new_spot.html
@@ -37,5 +37,12 @@
       </div>
     </div>
   </div>
+
+   <!-- footer -->
+<div class="wrapper row5 footer-ending">
+  <div id="copyright" class="hoc clear">
+    &copy; <script>document.write(new Date().getFullYear())</script> <span style="color_white">Luise Schwenke</span>
+  </div>
+</div>
 </body>
 </html>
