--- a/templates/flat_days.html
+++ b/templates/flat_days.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link href="/..Pcomspace Free Website Template - Free-CSS.com/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<link href="static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+
+
+     <!-- Anfang Navigation bar -->
+
+  <div class="sticky" style="background-color:black">
+  <div class="wrapper row1">
+    <header id="header" class="hoc clear">
+      <!-- ################################################################################################ -->
+      <div id="logo" class="fl_left">
+        <h1 style="color:#810955"><a href="https://www.instagram.com/elassurfamguaeca/" target="_blank">ElasSurfam <img src="static/images/instagram.svg"></a></h1>
+      </div>
+
+      <nav id="mainav" class="fl_right" >
+        <ul class="clear">
+          {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout {{ current_user.name }}</a>
+          </li>
+          {% endif %}
+          <li class="active"><a href={{url_for('home')}}>Home</a></li>
+            <li class="active"><a href={{url_for('best_spots')}}>Best Spots</a></li>
+          <li class="active"><a href={{url_for('news')}}>WSL News</a></li>
+          <li class="active"><a href={{url_for('forecast')}}>Surf Forecast</a></li>
+          <li><a class="drop" style="color:#6AAEBF" href={{url_for('lifestyle')}}>Lifestyle</a>
+         <ul>
+              <li><a href="{{url_for('pro_tips')}}">Tips from Pros</a></li>
+              <li><a href="{{url_for('flat_days')}}">Flat Days Training </a></li>
+              <li><a href="{{url_for('lifestyle')}}">Surf Playlist</a></li>
+            </ul>
+          </li>
+          <li><a href="{{url_for('about')}}" style="color:#810955">About ElasSurfam</a></li>
+        </ul>
+      </nav>
+
+    </header>
+      </div>
+  </div>
+
+        <!-- Ende Navigation bar -->
+<div style='background-image:url("https://cdn.pixabay.com/photo/2017/08/04/08/54/crash-2579437_1280.jpg"); height:700px; opacity: .6;'>
+     <h1 style="margin-top: 100px; text-align:center;"> COMING SOON</h1>
+
+  </div>
 
 </body>
 </html>
