--- a/templates/pro_tips.html
+++ b/templates/pro_tips.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 
- <!-- nav bar -->
-<div class="sticky" style="background-color:black">
+
+     <!-- Anfang Navigation bar -->
+
+  <div class="sticky" style="background-color:black">
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
       <!-- ################################################################################################ -->
@@ -44,26 +46,11 @@
       </div>
   </div>
 
- <!-- nav bar end-->
+        <!-- Ende Navigation bar -->
+<div style='background-image:url("https://cdn.pixabay.com/photo/2017/08/04/08/54/crash-2579437_1280.jpg"); height:700px; opacity: .6;'>
+     <h1 style="margin-top: 100px; text-align:center;"> COMING SOON</h1>
 
-  <!-- bar chart -->
-     <div style="margin-top:100px"><img src='static/images/new_plot.png'/></div>
-  <div> <b> Water Temperature: </b>{{short_water_temp}} °C</div>
-  <div> <b> Air Temperature: </b>{{air_temp}} °C</div>
- <div> This data is retrieved from Stormglass.oi data. For a more detailed view
-   check out <a href="https://www.surfline.com/"> Surfline.com
-
-
- </a>
-</div>
-
- <!-- bar chart end -->
-
-  <!-- footer-->
-<div class="wrapper row5 footer-ending">
-  <div id="copyright" class="hoc clear">
-    &copy; <script>document.write(new Date().getFullYear())</script> <span style="color_white">Luise Schwenke</span>
   </div>
-</div>
+
 </body>
 </html>
