--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>ElasSurfam</title>
+  <link rel="icon" type="image/x-icon" href="static/images/delfin">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/..Pcomspace Free Website Template - Free-CSS.com/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
