--- a/templates/new_spot.html
+++ b/templates/new_spot.html
@@ -4,6 +4,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 <head>
     <meta charset="UTF-8">
+      <link rel="icon" type="image/x-icon" href="static/images/delfin">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
