--- a/templates/FCPlot.html
+++ b/templates/FCPlot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="static/images/delfin">
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/..Pcomspace/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -14,18 +14,23 @@
 <div class="sticky" style="background-color:black">
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
-      <!-- ################################################################################################ -->
+
+      <!--Link to Instagram -->
       <div id="logo" class="fl_left">
         <h1 style="color:#810955"><a href="https://www.instagram.com/elassurfamguaeca/" target="_blank">ElasSurfam <img src="static/images/instagram.svg"></a></h1>
       </div>
 
       <nav id="mainav" class="fl_right" >
         <ul class="clear">
+
+          <!-- Register/ Login Function -->
           {% if current_user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout {{ current_user.name }}</a>
           </li>
           {% endif %}
+
+          <!-- Links -->
           <li class="active"><a href={{url_for('home')}}>Home</a></li>
             <li class="active"><a href={{url_for('best_spots')}}>Best Spots</a></li>
           <li class="active"><a href={{url_for('news')}}>WSL News</a></li>
@@ -44,7 +49,6 @@
     </header>
       </div>
   </div>
-
  <!-- nav bar end-->
 
   <!-- bar chart -->
@@ -52,13 +56,9 @@
   <div> <b> Water Temperature: </b>{{short_water_temp}} °C</div>
   <div> <b> Air Temperature: </b>{{air_temp}} °C</div>
  <div> This data is retrieved from Stormglass.oi data. For a more detailed view
-   check out <a href="https://www.surfline.com/"> Surfline.com
-
-
- </a>
+   check out <a href="https://www.surfline.com/"> Surfline.com</a>
 </div>
 
- <!-- bar chart end -->
 
   <!-- footer-->
 <div class="wrapper row5 footer-ending">
