--- a/templates/best_spots.html
+++ b/templates/best_spots.html
@@ -4,33 +4,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-      <link rel="icon" type="image/x-icon" href="static/images/delfin">
+      <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
    <link href="/..Pcomspace/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <link href="static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background-color:#D7E9F7">
 
 <!-- Header -->
 
  <div class="new_sticky">
   <div class="wrapper row1">
  <header id="header" class="hoc clear">
-      <!-- ################################################################################################ -->
+      <!--Link to instagram-->
       <div id="logo" class="fl_left">
         <h1 style="color:#810955"><a href="https://www.instagram.com/elassurfamguaeca/" target="_blank">ElasSurfam <img src="static/images/instagram.svg"></a></h1>
       </div>
-
       <nav id="mainav" class="fl_right" >
         <ul class="clear">
 
+ <!--Register/Login Function-->
           {% if current_user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout {{ current_user.name }}</a>
           </li>
           {% endif %}
+
+             <!--Links-->
           <li class="active"><a href={{url_for('home')}}>Home</a></li>
             <li class="active"><a href={{url_for('best_spots')}}>Best Spots</a></li>
           <li class="active"><a href={{url_for('news')}}>WSL News</a></li>
@@ -45,15 +47,18 @@
           <li><a href="{{url_for('about')}}" style="color:#810955">About ElasSurfam</a></li>
         </ul>
       </nav>
+     </header>
 </div>
  </div>
-    </header>
+
+ <!--Header end -->
 
  </div>
- <!-- Map + flash of map doesn't work -->
+
+ <!-- World Map of posts -->
 <div style="margin-top:100px">
         <h1 style="text-align:center; color:#810955"> Our Collection Of Spots On The Map</h1>
-         <div style="text-align:center"><img src='static/images/worldmap.png'/></div>
+         <div style="text-align:center; "><img src='static/images/worldmap.png' style="border-style: solid; border-width: 10px; border-image: linear-gradient(#C07F00,#FFD95A,#FFF7D4) 1;"/></div>
     {% with messages = get_flashed_messages() %}
    {% if messages %}
       {% for message in messages %}
@@ -77,23 +82,26 @@
             <span
                     class="meta">  Posted by {{post.author.name}} on {{post.date}}
 
+                 <!-- to manage, that Posts can only be deleted by Admin -->
                 {% if current_user.id ==2 %}
               <p> <a href="{{url_for('delete_post', post_id=post.id) }}">✘ Delete Post </a> </p>
                 {% endif %}
 
+                 <!--to manage, that Users can edit their own posts -->
                 {% if current_user.name == post.author.name %}
               <p> <a href="{{url_for('edit_post', post_id=post.id) }}">Edit your Post </a> </p>
                 {% endif %}
             </span>
 
-              <div style="position: relative;">
-                  <img src="{{post.img_url}}" style="opacity:0.4; width:300; height:300">
-                  <h6 style="position: absolute; top:130px; text-align:center !important;"> <b>Access to the beach: </b> <p> {{ post.access|safe }} </p></h6>
-            <h6 style="position: absolute; top:170px; text-align:center;"> <b>Vibe at the beach: </b> <p> {{ post.clima|safe }} </p></h6>
-            <h6 style="position: absolute; top:220px; text-align:center;"> <b>Quality of the waves: </b><p> {{ post.wave_quality|safe }} </p> </h6>
-            <h6 style="position: absolute; top:270px; text-align:center;"> <b>Extra information's:</b> <p> {{ post.infos|safe }} </p></h6>
 
-</div>
+              <div style="position: relative;">
+                  <img src="{{post.img_url}}" style="opacity:0.4; width:300; height:300; filter:blur(2px); border: 5px solid #060047; border-radius:30px">
+                  <h6 style="position: absolute; top:50px; text-align:center !important;"> <b>Access to the beach: </b> <p> {{ post.access|safe }} </p></h6>
+            <h6 style="position: absolute; top:150px; text-align:center !important;"> <b>Vibe at the beach: </b> <p> {{ post.clima|safe }} </p></h6>
+            <h6 style="position: absolute; top:250px; text-align:center !important;"> <b>Quality of the waves: </b><p> {{ post.wave_quality|safe }} </p> </h6>
+            <h6 style="position: absolute; top:350px; text-align:center !important;"> <b>Extra information's:</b> <p> {{ post.infos|safe }} </p></h6>
+            </div>
+
           </div>
         </div>
       </div>
@@ -106,18 +114,19 @@
   <!-- Comment something -->
 
 
-        <!-- New Post -->
-        <div class="clearfix">
+        <!-- Make a New Post -->
+ <div class="clearfix">
 {% if not current_user.is_authenticated %}
-                      <a class="btn btn-outline-danger" href="{{url_for('home')}}" style="margin-top:30px; float:right">Register or Login to contribute a new Spot</a>
-
-            {% else %}
-          <a class="btn btn-outline-danger" href="{{url_for('new_spot')}}" style="margin-top:30px; float:right">Share Your Favourite Spot</a>
+ <a class="btn btn-outline-danger" href="{{url_for('home')}}" style="margin-top:30px; float:right">Register or Login to contribute a new Spot</a>
+{% else %}
+<a class="btn btn-outline-danger" href="{{url_for('new_spot')}}" style="margin-top:30px; float:right">Share Your Favourite Spot</a>
 {% endif %}
         </div>
       </div>
     </div>
   </div>
+
+<!-- Footer -->
 <div class="wrapper row5 footer-ending" style="margin-top:60px !important">
   <div id="copyright" class="hoc clear">
     &copy; <script>document.write(new Date().getFullYear())</script> <span style="color_white">Luise Schwenke</span>
