--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -3,23 +3,24 @@
 {% import "bootstrap/wtf.html" as wtf %}
 <head>
     <meta charset="UTF-8">
-      <link rel="icon" type="image/x-icon" href="static/images/delfin">
+      <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/..Pcomspace/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <link href="static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color:#C0DBEA;">
 
  <!-- nav bar -->
 <div class="sticky" style="background-color:black">
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
-      <!-- ################################################################################################ -->
+      <!-- Link to Instagram -->
       <div id="logo" class="fl_left">
         <h1 style="color:#810955"><a href="https://www.instagram.com/elassurfamguaeca/" target="_blank">ElasSurfam <img src="static/images/instagram.svg"></a></h1>
       </div>
 
+        <!-- Register/ Login Function -->
       <nav id="mainav" class="fl_right" >
         <ul class="clear">
           {% if current_user.is_authenticated %}
@@ -27,6 +28,8 @@
             <a class="nav-link" href="/logout">Logout {{ current_user.name }}</a>
           </li>
           {% endif %}
+
+            <!-- Links -->
           <li class="active"><a href={{url_for('home')}}>Home</a></li>
             <li class="active"><a href={{url_for('best_spots')}}>Best Spots</a></li>
           <li class="active"><a href={{url_for('news')}}>WSL News</a></li>
@@ -41,32 +44,43 @@
           <li><a href="{{url_for('about')}}" style="color:#810955">About ElasSurfam</a></li>
         </ul>
       </nav>
-
     </header>
       </div>
   </div>
 
  <!-- nav bar end-->
 
-
+<!-- Flask Spot Search -->
 <div style="margin-top:100px">
+    <h1 style="color:blue; text-align:center; margin-bottom:50px">SPOT FINDER</h1>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
           <form method="post" action="">
-                            <div>{{ wtf.quick_form(form, novalidate=True, button_map={'submit': 'primary'}) }}</div>
-                        </form>
+              <div>{{ wtf.quick_form(form, novalidate=True, button_map={'submit': 'primary'}) }}</div>
+          </form>
       </div>
     </div>
   </div>
 
-{% with messages = get_flashed_messages() %}
-   {% if messages %}
-      {% for message in messages %}
-         {{ message }}
-      {% endfor %}
-   {% endif %}
-{% endwith %}
+    <!-- Flash Message, if entered Spot is not valid -->
+
+    {% with messages = get_flashed_messages() %}
+       {% if messages %}
+          {% for message in messages %}
+             {{ message }}
+          {% endfor %}
+       {% endif %}
+    {% endwith %}
+
 </div>
+
+   <!-- footer -->
+<div class="bottomwrapper row5 footer-ending" style="margin-top:100px !important">
+  <div id="copyright" class="hoc clear">
+    &copy; <script>document.write(new Date().getFullYear())</script> <span style="color_white">Luise Schwenke</span>
+  </div>
+</div>
+<!-- ############################################################################################ -->
 </body>
 </html>
