--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>ElasSurfam</title>
-  <link rel="icon" type="image/x-icon" href="static/images/delfin">
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/..Pcomspace Free Website Template - Free-CSS.com/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -22,13 +22,14 @@
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
         <div id="logo" class="fl_left">
+
+             <!--Link to instagram-->
         <h1 style="color:#810955"><a href="https://www.instagram.com/elassurfamguaeca/" target="_blank">ElasSurfam <img src="static/images/instagram.svg"></a></h1>
       </div>
 
+        <!-- first (register) modal -->
          {% if not current_user.is_authenticated %}
-  <!-- first (register) modal -->
     <button class="btn btn-outline-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-top:25px; margin-left:20px">Register</button>
-
         <div id="exampleModal" class="modal" tabindex="-1" role="dialog" data-backdrop="false">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -41,12 +42,9 @@
         {{ wtf.quick_form(form1, novalidate=True, button_map={"submit1": "primary"}) }}
 </form></p>
       </div>
-
     </div>
   </div>
 </div>
-<!-- first (register) modal end-->
-
 
         <!-- second (login) modal -->
      <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModaltwo" style="margin-top:25px">Login</button>
@@ -66,15 +64,17 @@
     </div>
   </div>
 </div>
-   <!--second (login) modal end-->
 {% endif %}
-      <!-- ################################################################################################ -->
+         <!--second (login) modal end-->
+
  <nav id="mainav" class="fl_right" >
         <ul class="clear">
 
 {% if current_user.is_authenticated %}
             <li class="active"><a href={{url_for('logout')}}>Logout {{ current_user.name }}</a></li>
               {% endif %}
+
+             <!-- Links -->
           <li class="active"><a href={{url_for('home')}}>Home</a></li>
             <li class="active"><a href={{url_for('best_spots')}}>Best Spots</a></li>
           <li class="active"><a href={{url_for('news')}}>WSL News</a></li>
@@ -89,64 +89,63 @@
           <li><a href="{{url_for('about')}}" style="color:#810955">About ElasSurfam</a></li>
         </ul>
       </nav>
+        </header>
 </div>
-    </header>
   </div>
 
+    <!-- Page Intro-->
   <div id="pageintro" class="hoc clear">
 
-    <article> 
-      <!-- ################################################################################################ -->
+    <article>
       <h2 class="heading" style="color:#810955"><b>WE SURF THE WORLD</b></h2>
-      <p style="color:#810955; opacity:1 !important"><b>This blog is contributed to all the surfers. Get your wave forecast and WSL News here!
+      <p style="color:#810955; opacity:1 !important"><b>This blog is contributed to all the surfers. Get your wave forecast and WSL News HERE!
           Dive into the surfing lifestyle!</b></p>
-      <p class="font-x1 uppercase bold" style="color:#810955"><b>ElasSurfam - Surfergirls of Guaeca - Sao Paulo</b></p>
-      <footer>
+      <p class="font-x1 uppercase bold" style="color:#810955"><b>ElasSurfam - Surfergirls of Guaeca - São Paulo</b></p>
 
         <ul class="nospace inline pushright">
           <li><a class="btn btn-outline-dark" href="{{url_for('news')}}" target="_blank">WSL News</a></li>
           <li><a class="btn btn-outline-dark" href="{{url_for('forecast')}}" target="_blank">Get Me To The Forecasts</a></li>
         </ul>
-      </footer>
-      <!-- ################################################################################################ --> 
     </article>
   </div>
-  <!-- ################################################################################################ --> 
 </div>
 <!-- End Top Background Image Wrapper --> 
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
+<!-- Page Video Background -->
 <div class="section-video">
   <main class="hoc container clear">
-    <!-- main body -->
     <div class="video-container" >
     <video autoplay muted loop>
         <source src="static/images/moving-waves.mp4" type="video/mp4" />
     </video>
       </div>
-     </div>
+
+      <!-- Previews -->
 <div class="wrapper row3">
+
+    <!-- Preview one -->
     <ul class="nospace group center">
       <li class="one_quarter first">
         <article>
           <div class="img-circular" style="background-image: url('static/images/surfing-woman.jpg');"></div>
           <h6 class="heading font-x1">Who are ElasSurfam?</h6>
-          <p>ElasSurfam (portugese: The Girls are surfing) is a collective of the surfing
-            girls from Guacea, a beach located in beautiful Sao Sebastiao - Sao Paulo/ Brazil.
+          <p>ElasSurfam (portugese: The girls are surfing) is a collective of the surfing
+            girls from Guacea, a beach area located in beautiful São Sebastião - São Paulo/ Brazil.
            <p> <a href={{url_for('about')}} target="_blank">Read more...</a> </p>
           </p>
         </article>
       </li>
+        <!-- Preview two -->
       <li class="one_quarter">
                   <div class="img-circular" style="background-image: url('static/images/lifestyle.jpg');"></div>
            <h6 class="heading font-x1">Lifestyle...</h6>
           <p>Here you can get free Tips from Pros to improve your style on the board, find fun activities
-        related to surf to fill the flat days and get yourself into the mood with the perfect spotify playlist! </p>
+        related to surf to fill the flat days and get yourself into the mood with the perfect Spotify playlist! </p>
            <p>   <a href={{url_for('lifestyle')}} target="_blank">Check the details...</a>
           </p>
         </article>
       </li>
+        <!-- Preview three -->
       <li class="one_quarter">
         <article><div class="img-circular" style="background-image: url('static/images/wsl.jpg');"></div>
           <h6 class="heading font-x1">WSL News!</h6>
@@ -155,17 +154,18 @@
           </p>
         </article>
       </li>
+        <!-- Preview four -->
       <li class="one_quarter">
         <article><div class="img-circular" style="background-image: url('static/images/forecast.jpg');"></div>
-          <h6 class="heading font-x1">MSW Forecast</h6>
-          <p>The forecast is based in MagicSeaWeed data. See the upcoming conditions for your spot!
+          <h6 class="heading font-x1">Wave Forecast</h6>
+          <p>The forecast is retrieving live data from Stormglass.io. Check the weather and wave conditions for your spot!
            <p> <a href={{url_for('forecast')}} target="_blank">Check The Spots...</a> </p>
           </p>
         </article>
       </li>
     </ul>
-    <!-- ################################################################################################ --> 
-    <!-- / main body -->
+
+    <!-- Carousel -->
     <div class="clear" style="margin-top:50px">
     <a href="{{url_for('best_spots')}}" target="_blank" ><h2 style="color:black; text-align:center">Check our favourite Spots around the world and add your own recommendations here!</h2></a>
 <section>
@@ -215,7 +215,6 @@
     </a>
 </div>
 
-      <!-- ################################################################################################ -->
     </section>
         </div>
   </main>
