--- a/templates/news.html
+++ b/templates/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-      <link rel="icon" type="image/x-icon" href="static/images/delfin">
+      <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/..Pcomspace/static/styles/layout.css" rel="stylesheet" type="text/css" media="all"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -16,17 +16,22 @@
   <div class="sticky" style="background-color:black">
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
+         <!--Link to instagram-->
       <div id="logo" class="fl_left">
         <h1 style="color:#810955"><a href="https://www.instagram.com/elassurfamguaeca/" target="_blank">ElasSurfam <img src="static/images/instagram.svg"></a></h1>
       </div>
 
       <nav id="mainav" class="fl_right" >
         <ul class="clear">
+
+             <!--Register/Login Function-->
           {% if current_user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout {{ current_user.name }}</a>
           </li>
           {% endif %}
+
+            <!--Links-->
           <li class="active"><a href={{url_for('home')}}>Home</a></li>
             <li class="active"><a href={{url_for('best_spots')}}>Best Spots</a></li>
           <li class="active"><a href={{url_for('news')}}>WSL News</a></li>
@@ -47,7 +52,7 @@
 
   <!-- nav bar end-->
 
-  <!-- top 5 men -->
+  <!-- top 5 men from WSL-->
   <div id="wrapper" style="margin-top:120px" >
       <p>Latest Update of the infos: {{today}}</p>
       <div id="first">
@@ -57,7 +62,7 @@
     <p><h6>Ranging</h6></p>
     <p style="margin-top:15px"><h6>Name</h6></p>
     <p style="margin-top:35px"><h6>Country</h6></p>
-    <p style="margin-top:15px"><h6>Points</h6></p>
+    <p style="margin-top:20px"><h6>Points</h6></p>
 
  </div>
 
@@ -88,7 +93,7 @@
 
 </div>
 
-        <!-- top 5 women -->
+        <!-- top 5 women from WSL-->
       <div id="second">
 <h4><b>Current WSL Top 5 Ranking Woman</b></h4>
 
@@ -96,7 +101,7 @@
     <p><h6>Ranging</h6></p>
     <p style="margin-top:15px"><h6>Name</h6></p>
     <p style="margin-top:35px"><h6>Country</h6></p>
-    <p style="margin-top:15px"><h6>Points</h6></p>
+    <p style="margin-top:20px"><h6>Points</h6></p>
 
  </div>
 
@@ -122,7 +127,7 @@
 
 <div class="mycolumn" style="width:50px">
    {% for info in data %}
-    <p>{{info[9][:20:]}}</p>
+    <p >{{info[9][:20:]}}</p>
 {% endfor %}</div>
 
 
