--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -56,7 +56,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-          <form method="post" action="">
+          <form method="POST">
               <div>{{ wtf.quick_form(form, novalidate=True, button_map={'submit': 'primary'}) }}</div>
           </form>
       </div>
